tests/compile_fail/default/no_default_variant_for_enum.rs
#[derive(derive_more::Default)]
enum Foo { Bar, Baz}

fn main() {}